fixed z-index blog background

--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ header::before {
     background-attachment: fixed;
 	width: 100%;
     position: relative;
-    z-index: 1;
+    z-index: -2;
 }
 
 #blog::before {
